--- a/skills.less
+++ b/skills.less
@@ -25,7 +25,7 @@
    
 }
 .skills-right {
-    background: url('/it-coding/landing/img/pic2.png') no-repeat center center;
+    background: url('/img/pic2.png') no-repeat center center;
     background-size: cover;
     width: 300px;
     height: 300px;
