--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
   justify-content: center;
 }
 .skills-right {
-  background: url('/img/pic2.png') no-repeat center center;
+  background: url('img/pic2.png') no-repeat center center;
   background-size: cover;
   width: 300px;
   height: 300px;
