--- a/my-gallery.less
+++ b/my-gallery.less
@@ -17,7 +17,7 @@ justify-content: center;
     display: flex;
     width: calc(100%/4);
     min-width: 320px;
-    min-height: 320px;
+    max-height: 320px;
 }
 .gallery-link:hover {
     .gallery-img {
