--- a/index.css
+++ b/index.css
@@ -505,7 +505,7 @@ img.mfp-img {
   display: flex;
   width: calc(100%/4);
   min-width: 320px;
-  min-height: 320px;
+  max-height: 320px;
 }
 .gallery-link:hover {
   content: '';
