--- a/index.css
+++ b/index.css
@@ -2,12 +2,10 @@
 .skills {
   display: flex;
   justify-content: left;
-  margin-left: 100px;
-  height: 570px;
-  width: 100%;
+  margin-left: 130px;
 }
 .skills-wrap {
-  width: 100%;
+  max-width: 1365px;
   height: 570px;
   display: flex;
 }
@@ -19,10 +17,10 @@
   justify-content: center;
 }
 .skills-right {
-  background: url('img/pic2.png') no-repeat center center;
-  background-size: cover;
-  width: 300px;
-  height: 300px;
+  background: url('/it-coding/landing/img/pic2.png') no-repeat center center;
+  background-size: contain;
+  width: 500px;
+  height: 500px;
 }
 .skills-box {
   width: 500px;
@@ -93,10 +91,12 @@
   transition: 0.4s;
 }
 .movePics {
-  width: 500px;
+  width: 100%;
   height: 500px;
+  width: 300px;
   transition: 3s;
   margin-top: 50px;
+  margin-left: 50px;
 }
 .feedback-wrapper {
   width: 100%;
@@ -773,6 +773,22 @@ body {
 }
 .wrapper {
   max-width: 1365px;
+  margin: 0 auto;
+}
+@media (max-width: 1365px) {
+  .wrapper {
+    max-width: 970px;
+  }
+}
+@media (max-width: 992px) {
+  .wrapper {
+    max-width: 750px;
+  }
+}
+@media (max-width: 767px) {
+  .wrapper {
+    max-width: none;
+  }
 }
 .menu-list {
   margin: 0;
@@ -781,6 +797,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 60%;
+  margin-right: 70px;
 }
 .menu-link {
   text-decoration: none;
@@ -799,20 +816,20 @@ body {
 .menu-logo {
   max-width: 40%;
   width: 100%;
+  margin-left: 100px;
 }
 .hero {
   position: relative;
   z-index: 2;
   height: 670px;
-  width: 100%;
-  max-width: 1200px;
+  max-width: 1365px;
   margin: 0 auto;
 }
 .container:after {
   content: '';
   position: absolute;
   top: 150px;
-  left: 250px;
+  left: 450px;
   width: 70%;
   height: 70%;
   background: url(macbook.jpeg) no-repeat;
@@ -820,7 +837,7 @@ body {
   background-size: contain ;
 }
 .hero-container {
-  width: 100%;
+  max-width: 1365px;
   height: 100%;
   position: relative;
 }
@@ -828,7 +845,7 @@ body {
   position: absolute;
   top: 50%;
   transform: translate(0);
-  max-width: 500px;
+  max-width: 400px;
   width: 100%;
   right: 0;
 }
