--- a/index.less
+++ b/index.less
@@ -21,8 +21,25 @@ body {
 } 
 .wrapper {
     max-width: 1365px;
+    margin: 0 auto;
     
 }
+@media(max-width: 1365px) {
+    .wrapper {
+        max-width: 970px;
+    }
+}
+@media(max-width: 992px) {
+    .wrapper {
+        max-width: 750px;
+    }
+}
+@media(max-width: 767px) {
+    .wrapper {
+        max-width: none;
+    }
+}
+
 
 
 .menu-list {
@@ -32,6 +49,7 @@ body {
     display: flex;
     justify-content: space-between;
     width: 60%;
+    margin-right: 70px;
     
     }
     .menu-link {
@@ -48,25 +66,26 @@ body {
         justify-content: space-between;
         height: 75px;
         align-items: center;
+        
     }
     .menu-logo {
         max-width: 40%;
         width: 100%;
+        margin-left: 100px;
        
     }
     .hero {
         position: relative;
         z-index: 2;
         height: 670px;
-        width: 100%;
-        max-width: 1200px;
+        max-width: 1365px;
         margin: 0 auto;
         }
         .container:after {
         content: '';
         position: absolute;
         top: 150px;
-        left: 250px;
+        left: 450px;
         width: 70%;
         height: 70%;
         background: url(macbook.jpeg) no-repeat;
@@ -75,7 +94,7 @@ body {
         
         }
         .hero-container {
-            width: 100%;
+            max-width: 1365px;
             height: 100%;
             position: relative;
         }
@@ -83,7 +102,7 @@ body {
         position: absolute;
         top: 50%;
         transform: translate(0);
-        max-width: 500px;
+        max-width: 400px;
         width: 100%;
         right: 0;
         }
