--- a/skills.less
+++ b/skills.less
@@ -4,14 +4,10 @@
 .skills {
     display: flex;
     justify-content: left;
-    margin-left: 100px;
-    height: 570px;
-    width: 100%;
-    //max-width: 1200px;
-   
-}
+    margin-left: 130px;
+  }
 .skills-wrap {
-    width: 100%;
+    max-width: 1365px;
     height: 570px;
     display: flex;
     
@@ -25,10 +21,10 @@
    
 }
 .skills-right {
-    background: url('img/pic2.png') no-repeat center center;
-    background-size: cover;
-    width: 300px;
-    height: 300px;
+    background: url('/it-coding/landing/img/pic2.png') no-repeat center center;
+    background-size: contain;
+    width: 500px;
+    height: 500px;
     
 }
 .skills-box {
@@ -104,8 +100,10 @@
 };
 .movePics {
     
-    width: 500px;
+    width: 100%;
     height: 500px;
+    width: 300px;
     transition: 3s;
     margin-top: 50px;
+    margin-left: 50px;
 }
