--- a/index.css
+++ b/index.css
@@ -699,8 +699,9 @@ ul {
 .footer-wrap {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   width: 100%;
-  height: 290px;
+  min-height: 290px;
   background: #141414;
 }
 
