--- a/index.css
+++ b/index.css
@@ -620,6 +620,9 @@ ul {
   background: #f5f5f5;
   margin-top: 100px;
 }
+.user-info {
+  width: 55%;
+}
 .user-form-wrap {
   display: flex;
   flex-wrap: wrap;
@@ -672,14 +675,16 @@ ul {
 }
 .personal-info2 {
   color: #787878;
-  width: 693px;
+  width: 100%;
+  max-width: 690px;
   height: 45px;
   margin-bottom: 30px;
   font-size: 16px;
 }
 .personal-info3 {
   color: #787878;
-  width: 693px;
+  width: 100%;
+  max-width: 690px;
   height: 270px;
   font-size: 16px;
 }
