--- a/index.css
+++ b/index.css
@@ -1,4 +1,19 @@
 @import 'about-us.css';
+@media(max-width: 1365px) {
+    .wrapper {
+        max-width: 970px;
+    }
+}
+@media(max-width: 992px) {
+    .wrapper {
+        max-width: 750px;
+    }
+}
+@media(max-width: 767px) {
+    .wrapper {
+        max-width: none;
+    }
+}
 .skills {
   display: flex;
   justify-content: left;
